--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "type": "git",
     "url": "https://github.com/wearelighthouse/stemCSS-templating"
   },
+  "scripts": {
+    "build": "gulp",
+    "watch": "gulp watch"
+  },
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "del": "^5.0.0",
+    "browser-sync": "^2.26.14",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.1.0"
   }
 }
