--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-purgecss": "^4.0.2",
     "gulp-sass": "^4.1.0"
   }
 }
