--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
-    "postinstall": "git clone https://github.com/wearelighthouse/stemCSS.git assets/scss"
+    "postinstall": "git clone https://github.com/wearelighthouse/stemCSS.git assets/scss",
+    "lint:style": "npx stylelint '**/*.scss'"
   },
   "devDependencies": {
     "browser-sync": "^2.26.14",
@@ -19,6 +20,9 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-purgecss": "^4.0.2",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-config-recommended-scss": "^4.2.0"
   }
 }
