--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,9 +1,26 @@
 {
+  "extends": [ "stylelint-config-standard", "stylelint-config-recommended-scss" ],
   "plugins": [
     "stylelint-scss"
   ],
   "rules": {
-    "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true
+    "at-rule-empty-line-before": null,
+    "at-rule-name-space-after": "always-single-line",
+    "block-opening-brace-space-before": "always",
+    "block-closing-brace-newline-after": [
+      "always", {
+        "ignoreAtRules": [ "if", "else" ]
+      }
+    ],
+    "color-hex-length": "long",
+    "declaration-empty-line-before": null,
+    "function-parentheses-newline-inside": null,
+    "number-leading-zero": "never",
+    "rule-empty-line-before": "always",
+    "scss/at-else-closing-brace-newline-after": "always-last-in-chain",
+    "scss/at-else-closing-brace-space-after": "always-intermediate",
+    "scss/at-else-empty-line-before": "never",
+    "scss/at-if-closing-brace-newline-after": "always-last-in-chain",
+    "scss/at-if-closing-brace-space-after": "always-intermediate"
   }
 }
