--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "gulp",
     "watch": "gulp watch",
     "postinstall": "git clone https://github.com/wearelighthouse/stemCSS.git assets/scss",
-    "stylelint": "npx stylelint '**/*.scss'"
+    "stylelint": "stylelint '**/*.scss'"
   },
   "devDependencies": {
     "browser-sync": "^2.26.14",
@@ -22,7 +22,9 @@
     "gulp-purgecss": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "stylelint": "^13.12.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^21.0.0",
-    "stylelint-config-recommended-scss": "^4.2.0"
+    "stylelint-scss": "^3.19.0"
   }
 }
